-Modification cards css -Ajout background color page home - Modification margin page home - Correction page not found couleur -Correction mediaqueries -Correction rotation collapse -Correction css collapse

--- a/frontend/my-react-app/src/components/BannerAbout/BannerAbout.css
+++ b/frontend/my-react-app/src/components/BannerAbout/BannerAbout.css
@@ -13,15 +13,17 @@
   width: 100%;
   height: 100%;
   background-color: #000000;
-  opacity: 0.6;
+  opacity: 0.5;
   z-index: 1;
-  border-radius: 1rem;
+  border-radius: inherit;
 }
 
 .banner-about__img {
   width: 100%;
   height: 14rem;
   object-fit: cover;
+  border-radius: 1rem;
+  display: block;
 }
 
 @media (max-width: 768px) {
@@ -30,5 +32,6 @@
   }
   .banner-about__img {
     height: 10rem;
+    border-radius: 0.5rem;
   }
 }
