--- a/frontend/my-react-app/src/pages/Home.css
+++ b/frontend/my-react-app/src/pages/Home.css
@@ -5,18 +5,43 @@
 }
 
 .home > .banner {
-  margin-top: -2rem;
+  margin-top: 0;
   margin-left: -2rem;
   margin-right: -2rem;
   width: calc(100% + 4rem);
+  margin-bottom: 2rem;
+}
+
+.home > .cards {
+  position: relative;
+  margin-top: 2rem;
+}
+
+/* Fond #F6F6F6 autour des cards, uniquement sur desktop (page Home) */
+@media (min-width: 769px) {
+  .home > .cards::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -2rem;
+    right: -2rem;
+    bottom: 0;
+    background-color: #F6F6F6;
+    border-radius: 1.5rem;
+    z-index: -1;
+  }
 }
 
 @media (max-width: 768px) {
   .home > .banner {
-    margin-top: -1rem;
+    margin-top: 0;
     margin-left: -1rem;
     margin-right: -1rem;
     width: calc(100% + 2rem);
+    margin-bottom: 1.5rem;
+  }
+  .home > .cards {
+    margin-top: 1.5rem;
   }
 }
 
