--- a/frontend/my-react-app/src/pages/NotFound.css
+++ b/frontend/my-react-app/src/pages/NotFound.css
@@ -1,18 +1,25 @@
 .not-found {
   text-align: center;
-  padding: 3rem 2rem;
+  padding: 4rem 2rem;
+  min-height: 70vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .not-found__title {
-  font-size: 6rem;
-  margin: 0 0 1rem;
-  color: #ff6060;
+  font-size: 18rem;
+  font-weight: bold;
+  margin: 0 0 3rem;
+  color: #FF6060;
+  line-height: 1;
 }
 
 .not-found__text {
-  font-size: 1.125rem;
-  margin: 0 0 2rem;
-  color: #000;
+  font-size: 2.25rem;
+  margin: 0 0 10rem;
+  color: #FF6060;
+  line-height: 1.5;
 }
 
 .not-found__link {
@@ -26,12 +33,19 @@
 
 @media (max-width: 768px) {
   .not-found {
-    padding: 2rem 1rem;
+    padding: 4rem 1rem 2rem;
+    min-height: 60vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
   .not-found__title {
-    font-size: 4rem;
+    font-size: 6rem;
+    margin-bottom: 2rem;
   }
   .not-found__text {
-    font-size: 1rem;
+    font-size: 1.125rem;
+    margin-bottom: 8rem;
+    line-height: 1.5;
   }
 }
